--- a/client/src/Dashboard/components/Navbars/Navbar.css
+++ b/client/src/Dashboard/components/Navbars/Navbar.css
@@ -7,8 +7,8 @@
 
 .navbarHeading {
   font-size: 1.8rem;
-  font-family: "Ubuntu", sans-serif;
-  font-weight: 400;
+  font-family: "Lato", sans-serif;
+  font-weight: bold;
   margin-left: 30px;
 }
 
